--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build --prod",
+        "build": "ng build --prod && npm run postbuild",
         "postbuild": "run-s copy:*",
         "copy:build": "copyfiles -u 1 dist/**/* $FE_ROOT_DIR/public/Zed/assets/js/mp-dashboard",
         "test": "ng test",
@@ -49,6 +49,6 @@
         "protractor": "^5.4.3",
         "ts-node": "^8.3.0",
         "tslint": "^5.18.0",
-        "typescript": "~3.7.5"
+        "typescript": "~3.8.3"
     }
 }
