--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build --prod && npm run postbuild",
+        "build": "ng build && npm run postbuild",
         "postbuild": "run-s copy:*",
-        "copy:build": "copyfiles -u 1 dist/**/* $FE_ROOT_DIR/public/Zed/assets/js/mp-dashboard",
+        "copy:build": "copyfiles -u 1 dist/**/* ../../../../../public/Zed/assets/js/mp-dashboard",
         "test": "ng test",
         "lint": "ng lint"
     },
@@ -21,8 +21,11 @@
         "@angular/platform-browser": "^9.0.1",
         "@angular/platform-browser-dynamic": "^9.0.1",
         "@angular/router": "^9.0.1",
-        "@spryker/styles": "^0.1.0-next.60",
-        "@spryker/web-components": "^0.2.0-next.2",
+        "@spryker/button": "^0.1.0-next.12",
+        "@spryker/card": "^0.1.0-next.16",
+        "@spryker/chips": "^0.1.0-next.3",
+        "@spryker/styles": "^0.1.0-next.69",
+        "@spryker/web-components": "^0.2.0-next.3",
         "rxjs": "^6.5.4",
         "tslib": "^1.10.0",
         "zone.js": "^0.10.2"
