--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "@angular/platform-browser-dynamic": "^9.0.1",
         "@angular/router": "^9.0.1",
         "@spryker/button": "^0.1.0-next.12",
-        "@spryker/card": "^0.1.0-next.16",
+        "@spryker/card": "^0.1.0-next.17",
         "@spryker/chips": "^0.1.0-next.3",
-        "@spryker/styles": "^0.1.0-next.69",
+        "@spryker/headline": "0.1.0-next.0",
+        "@spryker/styles": "^0.1.0-next.70",
         "@spryker/web-components": "^0.2.0-next.3",
         "rxjs": "^6.5.4",
         "tslib": "^1.10.0",
