--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build && npm run postbuild",
+        "build": "ng build --prod && npm run postbuild",
         "postbuild": "run-s copy:*",
-        "copy:build": "copyfiles -u 1 dist/**/* ../../../../../public/Zed/assets/js/mp-dashboard",
+        "copy:build": "copyfiles -u 1 dist/**/* $FE_ROOT_DIR/public/Zed/assets/js/mp-dashboard",
         "test": "ng test",
         "lint": "ng lint"
     },
@@ -24,7 +24,7 @@
         "@spryker/button": "^0.1.0-next.12",
         "@spryker/card": "^0.1.0-next.17",
         "@spryker/chips": "^0.1.0-next.3",
-        "@spryker/headline": "0.1.0-next.0",
+        "@spryker/headline": "0.1.0-next.1",
         "@spryker/styles": "^0.1.0-next.70",
         "@spryker/web-components": "^0.2.0-next.3",
         "rxjs": "^6.5.4",
