--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "spryker/dashboard-merchant-portal-gui-extension": "^1.0.0",
         "spryker/kernel": "^3.33.0",
         "spryker/symfony": "^3.0.0",
-        "spryker/zed-ui": "^1.6.0"
+        "spryker/transfer": "^3.27.0",
+        "spryker/zed-ui": "^2.0.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*"
@@ -26,7 +27,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     },
     "config": {
