--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
     "name": "mp-dashboard",
     "version": "0.0.1",
     "private": true,
+    "peerDependencies": {
+        "@angular/animations": "^15.0.3",
+        "@angular/cdk": "^15.0.3",
+        "@angular/common": "^15.0.3",
+        "@angular/core": "^15.0.3",
+        "@angular/elements": "^15.0.3",
+        "@angular/forms": "^15.0.3",
+        "@angular/platform-browser": "^15.0.3",
+        "rxjs": "~7.5.7"
+    },
     "dependencies": {
-        "@angular/animations": "^12.2.16",
-        "@angular/cdk": "^12.2.13",
-        "@angular/common": "^12.2.16",
-        "@angular/core": "^12.2.16",
-        "@angular/elements": "^12.2.16",
-        "@angular/forms": "^12.2.16",
-        "@angular/platform-browser": "^12.2.16",
-        "@spryker/button": "^0.6.2",
-        "@spryker/card": "^0.6.3",
-        "@spryker/chips": "^0.3.2",
-        "@spryker/headline": "^0.5.3",
-        "@spryker/styles": "^0.7.4",
-        "@spryker/utils": "^0.3.5",
-        "@spryker/web-components": "^0.3.3",
-        "rxjs": "~7.4.0"
+        "@spryker/button": "^1.0.0",
+        "@spryker/card": "^1.0.1",
+        "@spryker/chips": "^1.0.0",
+        "@spryker/headline": "^1.0.0",
+        "@spryker/styles": "^1.0.1",
+        "@spryker/utils": "^1.0.0",
+        "@spryker/web-components": "^1.0.0"
     }
 }
